@@ -1,3 +1,9 @@
+2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
+	* addRawImage: Include Length field in addRawImage. [Bug 16264]
+
+2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Started adding a patch from Yaroslav Schekin.
+
 2009-01-04 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Release 0.5
 	
